--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/12cde35a.main.css">
-        <script src="scripts/vendor/a52a8685.modernizr.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
+        <script src="scripts/vendor/modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -45,6 +45,6 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
-        <script data-main="scripts/6b59fa2c.main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
