--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">HDR DIFF</a></li>
-                    <li><a href="#photos">About</a></li>
+                    <li class="active">
+                        <button role="previous" class="btn btn-default">
+                            <span class="glyphicon glyphicon-arrow-left"></span>
+                        </button>
+                    </li>
+                    <li class="active">
+                        <button role="next" class="btn btn-default">
+                            <span class="glyphicon glyphicon-arrow-right"></span>
+                        </button>
+                    </li>
                 </ul>
                 <h3 class="text-muted">HDR DIFF</h3>
             </div>
