--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
                         </button>
                     </li>
                 </ul>
-                <h3 class="text-muted">HDR DIFF</h3>
+                <h3 class="text-muted">HDR Photos</h3>
             </div>
 
             <div class="row compare-photos-section">
             </div>
 
             <div class="footer">
-                <p>&#x2665; backbone.js &#x2665;</p>
+                <p>What is <a href="http://en.wikipedia.org/wiki/High-dynamic-range_imaging" target="_blank">High-dynamic-range imaging</a>? (wikipedia)</p>
+                <p>by <a href="http://saitodisse.github.io/">saitodisse</a></p>
+                <p>&#x2665; backbone.js, yeoman, bootstrap, SCSS, handlebars, grunt, bower, github, jquery-image-reveal, require.js &#x2665;</p>
             </div>
 
         </div>
