--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>HdrBackboneAproach</title>
+        <title>HDR x Normal Photos Comparisons</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -34,7 +34,7 @@
                         </button>
                     </li>
                 </ul>
-                <h3 class="text-muted">HDR Photos</h3>
+                <h2 class="text-muted">Normal vs HDR photos</h2>
             </div>
 
             <div class="row compare-photos-section">
