--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,12 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li class="active">
-                        <button role="previous" class="btn btn-default">
+                        <button role="previous" class="btn btn-default top-button">
                             <span class="glyphicon glyphicon-arrow-left"></span>
                         </button>
                     </li>
                     <li class="active">
-                        <button role="next" class="btn btn-default">
+                        <button role="next" class="btn btn-default top-button">
                             <span class="glyphicon glyphicon-arrow-right"></span>
                         </button>
                     </li>
@@ -41,6 +41,7 @@
             </div>
 
             <div class="footer">
+                <hr>
                 <p>What is <a href="http://en.wikipedia.org/wiki/High-dynamic-range_imaging" target="_blank">High-dynamic-range imaging</a>? (wikipedia)</p>
                 <p>by <a href="http://saitodisse.github.io/">saitodisse</a></p>
                 <p>&#x2665; backbone.js, yeoman, bootstrap, SCSS, handlebars, grunt, bower, github, jquery-image-reveal, require.js &#x2665;</p>
