--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>HdrBackboneAproach</title>
+        <title>HDR x Normal Photos Comparisons</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -20,23 +20,24 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li class="active">
-                        <button role="previous" class="btn btn-default">
+                        <button role="previous" class="btn btn-default top-button">
                             <span class="glyphicon glyphicon-arrow-left"></span>
                         </button>
                     </li>
                     <li class="active">
-                        <button role="next" class="btn btn-default">
+                        <button role="next" class="btn btn-default top-button">
                             <span class="glyphicon glyphicon-arrow-right"></span>
                         </button>
                     </li>
                 </ul>
-                <h3 class="text-muted">HDR Photos</h3>
+                <h2 class="text-muted">Normal vs HDR photos</h2>
             </div>
 
             <div class="row compare-photos-section">
             </div>
 
             <div class="footer">
+                <hr>
                 <p>What is <a href="http://en.wikipedia.org/wiki/High-dynamic-range_imaging" target="_blank">High-dynamic-range imaging</a>? (wikipedia)</p>
                 <p>by <a href="http://saitodisse.github.io/">saitodisse</a></p>
                 <p>&#x2665; backbone.js, yeoman, bootstrap, SCSS, handlebars, grunt, bower, github, jquery-image-reveal, require.js &#x2665;</p>
